Removed column and row style classes. Fixed issues with buttons not wrapping on smallers screens. Hid www link.

--- a/src/src/styles.scss
+++ b/src/src/styles.scss
@@ -127,15 +127,6 @@ a.icon > strong {margin-left:.25rem}
   visibility: visible;
   opacity: 1;
 } 
-// Tables
-.row {
-    display: flex;
-}
-
-.column {
-    flex: 50%;
-    padding: 5px;
-}
 
 .article-card {
   width: 100%;
@@ -219,9 +210,6 @@ a.icon > strong {margin-left:.25rem}
 }
 
 @media screen and (max-width: 500px) {
-  .column {
-    width: 100%;
-  }
   .section-carousel {
       height: 256px;
   }
